apps/bookinfo/bookinfo-gateway.yaml
# https://stackoverflow.com/questions/63915316/what-is-the-difference-virtualservice-and-gateway-in-istio
# Gateway = Ingress Controller -> the actual Ingress load balancer that consumes the ingress resource
# Virtual Service = Ingress resource -> routing rules
# Gateway is generally used to expose a VirtualService to the outside world.
# In short Gateway is for external traffic while VirtualService is for traffic that is already inside the istio cluster.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080 # listen on the istio ingressgateway service TARGETport. must be 8080 if using default istio ingressgateway service
      # port ,targetport
      name: http
      protocol: HTTP
    hosts:
    - "*" # expose all vservice hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080


# THere is a default gateway service CREATED for the above ingress gateway
# Default Gateway Service

#apiVersion: v1
#kind: Service
#metadata:
#  name: istio-ingressgateway
#spec:
#  selector:
#    istio: ingressgateway
#  ports:
#  - name: status-port
#    port: 15021
#    protocol: TCP
#    targetPort: 15021
#  - name: http2
#    port: 80
#    protocol: TCP
#    targetPort: 8080
#  - name: https
#    port: 443
#    protocol: TCP
#    targetPort: 8443
#
